# latent_representation_of_market_states

./: .gitignore  README.md  main.py  pyproject.toml
configs/calibration/: default.yaml
configs/data/: default.yaml
configs/evaluation/: default.yaml
configs/experiment/: ablation_no_generator.yaml  ablation_no_proto.yaml  baseline_hs.yaml  full_method.yaml  full_method_us.yaml
configs/features/: default.yaml
configs/model/: cvae.yaml  vae.yaml
scripts/: calibrate_method.py  download_data.py  evaluate_oos.py  prepare_data.py  run_ablation.py  run_full_experiment.py  train_generator.py  train_normal_model.py
src/: __init__.py
src/assembly/: scenario_assembly.py  weighting.py
src/data/: loaders.py  preprocessing.py  splits.py  windowing.py
src/evaluation/: ablations.py  calibration.py  oos_evaluation.py  structural_eval.py
src/features/: market_features.py  portfolio_features.py  stress_indicators.py
src/generator/: cvae.py  diagnostics.py  inference.py  train.py
src/normal_model/: prototypes.py  stability.py  vae.py
src/regimes/: diagnostics.py  partition.py  stress_index.py
src/risk/: backtesting.py  portfolio_loss.py  weighted_risk_metrics.py
src/tail/: dependence.py  extractor.py  severity.py
src/utils/: config.py  io.py  logging_utils.py  plotting.py  seeds.py
tests/: test_assembly.py  test_partition.py  test_prototypes.py  test_stress_index.py  test_tail_extractor.py  test_weighted_metrics.py
